fixed alignment on nav

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -70,7 +70,7 @@ html {
 /*  min-height: 100%;*/
 position: absolute;
 vertical-align: middle;
-margin: 3%;
+margin: 1%;
 }
 
 #intro h1 {
